Add new post and RSS link

--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ author:
     email: kevinm.s@outlook.co.id
     github: kevinmichaelsn
     instagram: kevv.michael_
+    rss: /feed.xml
 
 accent_image: /assets/img/sidebar-bg.jpg
 accent_color: #87CEEB
