--- a/_config.yml
+++ b/_config.yml
@@ -87,6 +87,8 @@ defaults:
     values:
       invert_sidebar: true
 
+mermaid: true
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
